# pyalgorithms

./: README.md  REFERENCE.md  config.toml  pyproject.toml
pyalgorithms/: __init__.py
pyalgorithms/search/: __init__.py  max.py  min.py
pyalgorithms/sorting/: __init__.py  bubblesort.py  quicksort.py  selectsort.py
tests/performance_tests/: search_tests.py  sort_tests.py
tests/unit_tests/: search_tests.py  sort_tests.py
