[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAlgorithms"
version = "0.0.1"
authors = [
  { name="Jakub Kopiszka", email="kopiszkajakub20@gmail.com" },
]
description = "Python package implementing many algorithms"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-2.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JKopiszka/pyalgorithms"
Issues = "https://github.com/JKopiszka/pyalgorithms/issues"

[tool.setuptools.packages.find]
include = ["pyalgorithms"]
exclude = ["tests*"]